--- a/frontendApp/android/package.json
+++ b/frontendApp/android/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-ui-datepicker": "^2.0.2"
+    "react-native-ui-datepicker": "^2.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
