--- a/frontendApp/android/app.json
+++ b/frontendApp/android/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "android",
+    "name": "DispurCollege",
     "slug": "android",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/dispurCollege.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/dispurCollege.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,7 +19,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/dispurCollege.png",
         "backgroundColor": "#ffffff"
       }
     },
