--- a/frontendApp/android/package.json
+++ b/frontendApp/android/package.json
@@ -9,22 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "dayjs": "^1.11.11",
     "expo": "^51.0.5",
+    "expo-checkbox": "~3.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-expo-swipe-button": "^1.0.2",
-    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-ui-datepicker": "^2.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-checkbox": "~3.0.0"
+    "react-native-ui-datepicker": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
