--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "css" : "npx tailwind -i ./public/css/input.css -o ./public/css/analyt.css -w"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +13,13 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "lokijs": "^1.5.12",
     "mongoose": "^8.3.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "winston": "^3.13.0"
   }
 }
