--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css" : "npx tailwind -i ./public/css/input.css -o ./public/css/analyt.css -w"
+    "css" : "npx tailwind -i ./public/css/input.css -o ./public/css/output.css -w"
   },
   "author": "",
   "license": "ISC",
