--- a/frontendApp/android/package.json
+++ b/frontendApp/android/package.json
@@ -14,11 +14,11 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.11",
-    "expo": "^51.0.5",
+    "expo": "^51.0.20",
     "expo-checkbox": "~3.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.3",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-expo-swipe-button": "^1.0.2",
     "react-native-safe-area-context": "4.10.1",
