--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL='mongodb://127.0.0.1:27017/dispurcollegeattendance'
+DATABASE_URL='mongodb+srv://dummydeka09:Ngt6Cki4Ve74mPqY@attendance-system-01.f3jf885.mongodb.net/?retryWrites=true&w=majority&appName=attendance-system-01'
 JWT_TOKEN='dispurCollege1990panchanan'
