--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,15 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "lokijs": "^1.5.12",
     "mongoose": "^8.3.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
